# rusty_websocket

./: .env.example  Cargo.toml  b_all.bat  b_all.sh  encryption_compatibility.md  llm.txt  readme.md  test_cases.md
libws/: Cargo.toml
libws/src/: enc_api_route.rs  enc_util.js  enc_util.rs  enc_utils.rs  jwt_api_route.rs  jwt_utils.rs  lib.rs  ws_client.rs
server/: Cargo.toml
server/src/: client_tests.rs  enc_tests.rs  main.rs  ws_tests.rs
server/web/: app.js  enc_tests.html  enc_tests.js  enc_utils.js  index.html  jwt_tests.html  jwt_utils.js  jwt_websocket_test.js  log_test.js  module_test.js  tests.html  tests.js  ws_tests.js
