[package]
name = "libws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "alloc"] }

[lib]
name = "libws"
path = "src/lib.rs"
crate-type = ["rlib"]