[package]
name = "libws"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tower-http = { version = "0.5", features = ["fs"] }
typenum = "1.17.0"
rand = "0.8.5"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
generic-array = "0.14.7"
aes-gcm = "0.10.3"
base64 = "0.21.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7.9", features = ["ws"] }
p256 = { version = "0.13.2", features = ["ecdh", "arithmetic"] }
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.0"