[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
libws = { path = "../libws" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
chrono = { version = "0.4", features = ["serde", "alloc"] }
