[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
libws = { path = "../libws" }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde", "alloc"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21.4"
aes-gcm = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
generic-array = "0.14.7"
rand = "0.8.5"
time = { version = "0.3", features = ["formatting"] }
jsonwebtoken = "9.2.0"
